<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_menu">Menu</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="firefox">firefox</string>
    <string name="github">github</string>
    <string name="google">google</string>
    <string name="logo">logo</string>
    <string name="oracle">oracle</string>
    <string name="texo">texto</string>
    <string name="textodos">textodos</string>
    <string name="_">......................................................................</string>

</resources>
