<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|center_vertical"
    android:accessibilityLiveRegion="none"
    android:gravity="top"
    android:orientation="vertical"
    tools:context="org.android.splashscreen.Menu"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:contentDescription="@string/textodos"
        android:text="@string/_"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/github"
        android:layout_width="200dp"
        android:layout_height="110dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/github"
        android:src="@drawable/github" />

    <ImageView
        android:id="@+id/google"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="top|center"
        android:contentDescription="@string/google"
        android:src="@drawable/google" />

    <ImageView
        android:id="@+id/firefox"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="top|center"
        android:contentDescription="@string/firefox"
        android:src="@drawable/firefox" />
    
    <ImageView
        android:id="@+id/oracle"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_gravity="top|center"
        android:contentDescription="@string/oracle"
        android:src="@drawable/oracle" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:contentDescription="@string/texo"
        android:text="@string/_"
        android:textAlignment="center"
        android:textStyle="bold" />

</LinearLayout>
